# c-and-cpp-college

./: .gitignore  README.md
aula1/: aula1.c
aula10/: aula.c  aula10-v3.c  aula10.c
aula10/versions/: aula10-v1.c  aula10-v5.c
aula12/: aula12.c
aula8/: aula8.c
aula9/: aula9.cpp
aulas/aula10/: aula10.c
aulas/aula10/versions/: aula10-v2.c
aulas/aula13/: aula13.c
aulas/aula14/: alunos.txt  aula14.c
aulas/aula5/: aula5.c
aulas/aula9/: ex2.cpp
c-classes/aula10/versions/: aula10-v4.c
c-classes/aula13/: struct-test.c
c-classes/aula2/: aula2.c
c-classes/aula4/: aula.c
c-classes/aula6/: aula6.c  ex.c
c-testes/: Ponto.h  janelac.c  main.c  ponto.c
c-testes/pbplotlib-test/src/: matplotteste.c
cmake-teste/: CMakeLists.txt
cmake-teste/source/: main.c
cpp-classes/: helloworld.cpp
cpp-classes/aula1/src/: desafio.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  variaveis.cpp
cpp-classes/aula2/: aula2.cpp  exercicio.cpp
cpp-classes/aula3/: integral-por-trapezio.cpp  minimos-quadrados.cpp
cpp-classes/aula4/: volumecubo.cpp
cpp-classes/aula5/: classe-medidas.cpp
cpp-classes/aula6/: matriz_esparsa.cpp
cpp-classes/aulas_extras/: teste_calculadora-classe.cpp
cpp-testes/: alocacaodinamica.cpp  robot_move.cpp  teste-arquivo-sigilo.cpp  teste1.cpp  valida-senha.cpp
cpp-testes/matplotlibcpp/include/: pbPlots.hpp
cpp-testes/matplotlibcpp/lib/: pbPlots.cpp
cpp-testes/matplotlibcpp/src/: teste.cpp
exercicio-runcodes/: caixa copy.c  connect4.c
exercicio-runcodes/ja-entregues/: 4operacoes.c  bhaskara.c  caixa.c  countpositive.c  divisor.c  exclamacao.c  fibionnaci.c  funcao-quadrada.c  howmanynumberareinintervolof1020.c  imc.c  intervalo.c  inverter.c  maiornum.c  matriz_simetrica.c  matriz_transposta.c  maxmin.c  notas.c  novofibonacci.c  primos.c  programa.c  raiz.c  remover.c  rentabilidade.c  senhaouanomisterioso.c  tabuada.c  teste-final.c  triangulo.c
orientacao-por-objeto/: ex1.cpp  ex2.cpp  teste1.cpp  teste2.cpp  teste3.cpp
p1/: p1.c  teste.c
p2/: robo.c
p2-extra/: leitor-de-sensores.c  leitor2-0.c
utilities_c_cpp/: notes.txt
utilities_c_cpp/headers/: tools.h
utilities_c_cpp/src/: testes_headers.c  tools.c
